# med-rag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: chat.py  chat_routes.py  documents.py  evaluation.py  health.py  middleware.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  models.py
app/documents/: __init__.py  chunker.py  current_parser.py  file_safety.py  high_fidelity_parser.py  index_state.py  job_repository.py  jobs.py  malware.py  models.py  parser_contract.py  queue.py  repository.py  resource_inspector.py  service.py  storage.py  sync.py  validator.py  worker.py
app/evaluation/: __init__.py  correctness_check.py  recall_evaluator.py  relevance_evaluator.py  report.py
app/generation/: __init__.py  deepseek_provider.py  engine.py  openai_provider.py  prompt_builder.py  qwen_provider.py  stream.py  zhipu_provider.py
app/intent/: __init__.py  categories.py  classifier.py  router.py
app/retrieval/: __init__.py  access.py  engine.py  hybrid.py  hybrid_engine.py  keyword_store.py  metadata_filter.py  milvus_store.py  reranker.py
app/safety/: __init__.py  audit.py  classifier.py  dlp.py  (+7 more)
data/: sample_medical.md
deploy/: nginx.conf  parser-requirements.txt  parser-worker.Dockerfile  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
migrations/: env.py
scripts/: build_safety_dataset.py  cleanup_quarantine.py  create_admin.py  evaluate_safety.py
tests/: conftest.py  test_deployment_security.py  test_smoke.py
(+95 files in other folders)
