[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "med-rag"
version = "1.0.0"
description = "企业级医疗行业 RAG 知识助手"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "redis>=5.0",
    "pymilvus>=2.4.0",
    "whoosh>=2.7",
    "jieba>=0.42",
    "sentence-transformers>=3.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "python-pptx>=0.6",
    "mistletoe>=1.3",
    "httpx>=0.27",
    "slowapi>=0.1",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
